Implement saving to file + tests -> jUnit
- Method args: ArrayList -> List (more permissive)
- jUnit jar added as dependency
- Can set MSE for index before calling OneFileNeuralIndex#trainIndex (stored in field until Net is created)
- Some small fixes